[tool.poetry]
name = "cor-test"
version = "0.1.0"
description = ""
authors = ["Meena Subramaniam"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
cellxgene-census = "1.15.0"
jupyterlab = "^4.0.0"
pydeseq2 = "^0.4.10"
decoupler = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
